Primeira etapa do JS

--- a/projeto-anime-app/package.json
+++ b/projeto-anime-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meu-projeto-animes",
+  "name": "projeto-anime-app",
   "version": "1.0.0",
   "type": "module",
   "description": "",
